@@ -1,4 +1,5 @@
 HEAD
+	+ Check if objects are system critical before deletion
 	+ Improved migration code from 3.2.11
 3.2.12
 	+ Provision - Clear link attribute on __USERS__ entry when provisioning as
